--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -11,3 +11,18 @@ spring.security.oauth2.client.registration.github.scope=read:user,user:email
 # Google OAuth2 Configuration
 spring.security.oauth2.client.registration.google.client-id=your-client-id
 spring.security.oauth2.client.registration.goole.client-secret=your-client-secret
+
+# Database (Postgres)
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Flyway Settings
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=validate
