docs: add `README.md`

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -13,6 +13,7 @@ spring.security.oauth2.client.registration.google.client-id=your-client-id
 spring.security.oauth2.client.registration.google.client-secret=your-client-secret
 
 # Database (Postgres)
+# Change 'postgres' to 'localhost' if you want to run locally
 spring.datasource.url=jdbc:postgresql://postgres:5432/backend_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
