--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:24-alpine
-
 WORKDIR /app
 
+# Copy package files first (cache layer)
 COPY package*.json ./
 RUN npm install
 
-EXPOSE 3000
+# Copy source (this layer changes frequently)
+COPY . .
 
+EXPOSE 3000
 CMD ["npm", "run", "dev"]
