refactor: change frontend to react with vite

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,22 @@
 FROM node:24-alpine
+
+# Install dependencies for better compatibility
+RUN apk add --no-cache git
+
+# Set working directory
 WORKDIR /app
 
-# Copy package files first (cache layer)
+# Copy package files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
-# Copy source (this layer changes frequently)
+# Copy source code
 COPY . .
 
-EXPOSE 3000
+# Expose Vite dev server port
+EXPOSE 5173
+
+# Start development server
 CMD ["npm", "run", "dev"]
