--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -35,3 +35,6 @@ gcp.avatar-folder=avatars/
 
 # JWT
 jwt.secret=my_very_secure_secret_key_that_is_long_enough_for_hmac256
+
+# Frontend URL
+app.frontend.url=http://localhost:5173
