--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - ../frontend:/app
       - /app/node_modules
     env_file:
-      - ../frontend/.env.local
+      - ../frontend/.env
     depends_on:
       - backend
     networks:
