chore: add java mail sender

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -38,3 +38,11 @@ jwt.secret=my_very_secure_secret_key_that_is_long_enough_for_hmac256
 
 # Frontend URL
 app.frontend.url=http://localhost:5173
+
+# Mail Configuration for MailHog
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
