--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -49,6 +49,14 @@ services:
     networks:
       - app-network
 
+  mailhog:
+      image: mailhog/mailhog
+      ports:
+        - "1025:1025"
+        - "8025:8025"
+      networks:
+      - app-network
+
 volumes:
   postgres_data:
 
